[gd_scene load_steps=11 format=3 uid="uid://ba56bol4rbggp"]

[ext_resource type="FontFile" uid="uid://cicppa12acwpw" path="res://resources/fonts/alagard.ttf" id="1_8okc1"]
[ext_resource type="Script" path="res://ui/tutorial/tutorial_panel.gd" id="2_cky66"]
[ext_resource type="Texture2D" uid="uid://dsyeapnvmd1po" path="res://resources/sprites/controls/keyboard/enteralt.png" id="3_cvlnn"]
[ext_resource type="Texture2D" uid="uid://cluajaeeln1i4" path="res://resources/sprites/controls/keyboard/backspace.png" id="3_m2474"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpvku"]
bg_color = Color(0, 0, 0, 0.658824)

[sub_resource type="Theme" id="Theme_or3yw"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_fpvku")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8105"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_hxsxw"]
default_font = ExtResource("1_8okc1")
Panel/styles/panel = SubResource("StyleBoxFlat_w8105")

[sub_resource type="Theme" id="Theme_lbmvr"]
default_font_size = 16

[sub_resource type="Theme" id="Theme_kh0tn"]
default_font_size = 16

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = SubResource("Theme_or3yw")
script = ExtResource("2_cky66")

[node name="TutorialPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(575, 460)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 2
theme = SubResource("Theme_hxsxw")

[node name="MarginContainer" type="MarginContainer" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="VBoxContainer" parent="TutorialPanel/MarginContainer"]
layout_mode = 2

[node name="TutorialImage" type="TextureRect" parent="TutorialPanel/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="TutorialText" type="Label" parent="TutorialPanel/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 10
text = "Text Here"
autowrap_mode = 3

[node name="PageContainer" type="HBoxContainer" parent="TutorialPanel/MarginContainer/MainContainer"]
layout_mode = 2

[node name="PageNumberLabel" type="Label" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer"]
layout_mode = 2
text = "1/1"

[node name="ControlsContainer" type="HBoxContainer" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 10

[node name="BackContainer" type="HBoxContainer" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer/ControlsContainer"]
layout_mode = 2

[node name="BackButtonIcon" type="TextureRect" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer/ControlsContainer/BackContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("3_m2474")
expand_mode = 3

[node name="Label" type="Label" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer/ControlsContainer/BackContainer"]
layout_mode = 2
theme = SubResource("Theme_lbmvr")
text = "Back"

[node name="NextContainer" type="HBoxContainer" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer/ControlsContainer"]
layout_mode = 2

[node name="NextButtonIcon" type="TextureRect" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer/ControlsContainer/NextContainer"]
layout_mode = 2
texture = ExtResource("3_cvlnn")
expand_mode = 2

[node name="NextLabel" type="Label" parent="TutorialPanel/MarginContainer/MainContainer/PageContainer/ControlsContainer/NextContainer"]
layout_mode = 2
theme = SubResource("Theme_kh0tn")
text = "Next"

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
